--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -39,7 +39,7 @@
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link" aria-current="page" href="index.html">Accueil</a>
         <a class="nav-link active" href="fonctionnalites.html">Fonctionnalités</a>
-        <a class="nav-link" href="donation.html">Soutenir</a>
+        <a class="nav-link" href="soutenir.html">Soutenir</a>
       </nav>
     </div>
   </header>
@@ -48,12 +48,7 @@
 
     <h1>En dev</h1>
 
-    <ul>Communauté
-      <li>Règles à respecter</li>
-      <li>Connaissances à avoir</li>
-      <li>Liens à connaitre</li>
-      <li>Personnes à suivre</li>
-      <br>
+    <ul>
       Suivi personnel
       <li>Evolution du bag</li>
       <li>Projection des achats et ventes</li>
