--- a/soutenir.html
+++ b/soutenir.html
@@ -39,7 +39,7 @@
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link" aria-current="page" href="index.html">Accueil</a>
         <a class="nav-link" href="fonctionnalites.html">Fonctionnalités</a>
-        <a class="nav-link active" href="donation.html">Soutenir</a>
+        <a class="nav-link active" href="soutenir.html">Soutenir</a>
       </nav>
     </div>
   </header>
