--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -46,29 +46,19 @@
 
   <main class="px-3">
 
-    <h1>En dev</h1>
+    <p>Application & code source hebergés sur github.</p>
+    <p>C'est du front-end, laissez tourner sur votre machine.</p>
+    <p>L'avantage c'est que vous avez le contrôle. Votre clé API n'est pas stockée.</p>
+
+    <h1>Fonctionnalités</h1> 
 
     <ul>
-      Suivi personnel
-      <li>Evolution du bag</li>
-      <li>Projection des achats et ventes</li>
-      <br>
-      Analyse tendance
-      <li>Détection des cryptos qui pump (analyse Binance + Twitter)</li>
-      <li>Proposition de points d'entrée et de sortie grâce à TradingView</li>
-      <br>
-      Automate
+
       <li>Fixe un prix d'entrée et le suit vers le bas avant d'acheter</li>
       <li>Fixe un prix de sortie et le suit vers le haut avant de vendre</li>
       <li>Achète dès la fin d'un dump</li>
       <li>Vend dès la fin d'un pump</li>
-      <br>
-      Automate++
-      <li>Combine 'Proposition de points d'entrée et de sortie grâce à TradingView' + 'Fixe un prix d'entrée et le suit vers le bas avant d'acheter/Fixe un prix de sortie et le suit vers le haut avant de vendre'</li>
-      <li>Achète du Doge quand Musk tweet et vend quand fin de la hype</li>
-      
-
-
+    
     </ul>
 
   </main>
