--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   </header>
 
   <main class="px-3">
-    <h1>Crypto Trading Automate</h1>
-    <p class="lead">CryptoChancla est un automate gratuit et communautaire pour le trading de cryptomonnaies. Ici pas de fioriture, nous n'avons pas de temps à perdre. Fonctionne avec une clé API Binance.</p>
+    <h1>Crypto Trading Assistant</h1>
+    <p class="lead">CryptoChancla est un assistant gratuit et communautaire pour le trading de cryptomonnaies. Ici pas de fioriture, nous n'avons pas de temps à perdre. Fonctionne avec une clé API Binance.</p>
     <p class="lead">
       <a href="app/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Entrer</a>
     </p>
