--- a/app/index.html
+++ b/app/index.html
@@ -7,28 +7,60 @@
     <meta name="author" content="CryptoPanoramix">
     <title>CryptoChancla</title>
 
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
-    <style>body{background-color: black;}</style>
+    <link href="style.css" rel="stylesheet">
+
 
   </head>
-  <body>
+  <body class="text-white bg-dark">
+
+    <h3><i class="bi bi-calculator-fill"></i>CryptoChancla</h3>
 
 
 
-    <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
-  <div id="tradingview_67533"></div>
-  <div class="tradingview-widget-copyright"><a href="https://fr.tradingview.com/symbols/BTCUSDT/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">BTCUSDT graphique</span></a> par TradingView</div>
+  <!-- Modal -->
+  <div class="modal fade" id="modalCleAPI" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalCleAPILabel">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content bg-dark">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalCleAPILabel">Liaison vers Binance</h5>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="cle_api" class="col-form-label">Clé API :</label>
+              <input type="text" class="form-control" id="cle_api">
+            </div>
+            <div class="mb-3">
+              <label for="secret_api" class="col-form-label">Secret :</label>
+              <input type="text" class="form-control" id="secret_api">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" onclick="saisie_cle_api()" class="btn btn-secondary">Commencer</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container"> 
+  <div id="tradingview_b0bb0"></div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.widget(
   {
-  "width": 1280,
-  "height": 720,
+  "autosize": true,
   "symbol": "BINANCE:BTCUSDT",
   "interval": "D",
   "timezone": "Etc/UTC",
@@ -41,14 +73,148 @@
   "hide_side_toolbar": false,
   "allow_symbol_change": true,
   "save_image": false,
-  "container_id": "tradingview_67533"
+  "container_id": "tradingview_b0bb0"
 }
   );
   </script>
 </div>
 <!-- TradingView Widget END -->
 
+  
+  <h2>Smart Buy</h2>
 
+  <table><tr>
+    <td><input type="text" class="form-control col-2" placeholder="Paire, ex BTCUSDT"></td>
+    <td><input type="text" class="form-control col-2" placeholder="Prix CIBLE, ex 61234.1234"></td>
+    <td><input type="text" class="form-control col-2" placeholder="Ecart X en %, ex 15"></td>
+    <td><input type="text" class="form-control col-2" placeholder="Quantité, ex 0.5555"></td>
+    <td> <button class="btn btn-secondary">Test</button></td>
+    <td><button class="btn btn-success">Acheter pour de vrai</button></td>
+  </tr></table>
+  
+  <table class="table table-dark table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Paire</th>
+        <th scope="col">Prix ACTUEL</th>
+        <th scope="col">Prix CIBLE</th>
+        <th scope="col">Ecart X</th>
+        <th scope="col">Quantité</th>
+        <th scope="col">Etat</th>
+        <th scope="col">PLUS_HAUT</th>
+        <th scope="col">Date début</th>
+        <th scope="col">Date CIBLE touchée</th>
+        <th scope="col">Date vente</th>
+      </tr>
+    </thead>
+    <tbody>
+  
+  
+  
+      <tr>
+        <th>fdsqf</th>
+        <th>fdsqf</th>
+        <th>fdsqf</th>
+        <td>fdsqf %</td>
+        <td>fdsqffsdq</td>
+        <td id="etat_smart_sell">fdsqfds <button class="btn btn-warning">Annuler</button></td>
+        <td id="last_top">fdsqfdsqf</td>
+        <td>fdsqffsdq</td>
+        <td>fdsqffsdq</td>
+        <td>fdsqffsdq</td>
+      </tr>
+  
+  
+      <tr>
+        <th>fdsqf</th>
+        <th>fdsqf</th>
+        <th>fdsqf</th>
+        <td>fdsqf %</td>
+        <td>fdsqffsdq</td>
+        <td id="etat_smart_sell">fdsqfds <button class="btn btn-warning">Annuler</button></td>
+        <td id="last_top">fdsqfdsqf</td>
+        <td>fdsqffsdq</td>
+        <td>fdsqffsdq</td>
+        <td>fdsqffsdq</td>
+      </tr>
+  
+  
+    </tbody>
+  </table>
+
+  <h2>Smart Sell</h2>
+
+  <table><tr>
+    <td><input type="text" class="form-control col-2" placeholder="Paire, ex BTCUSDT"></td>
+    <td><input type="text" class="form-control col-2" placeholder="Prix CIBLE, ex 61234.1234"></td>
+    <td><input type="text" class="form-control col-2" placeholder="Ecart X en %, ex 15"></td>
+    <td><input type="text" class="form-control col-2" placeholder="Quantité, ex 0.5555"></td>
+    <td> <button class="btn btn-secondary">Test</button></td>
+    <td><button class="btn btn-danger">Vendre pour de vrai</button></td>
+  </tr></table>
+
+  <table class="table table-dark table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Paire</th>
+        <th scope="col">Prix ACTUEL</th>
+        <th scope="col">Prix CIBLE</th>
+        <th scope="col">Ecart X</th>
+        <th scope="col">Quantité</th>
+        <th scope="col">Etat</th>
+        <th scope="col">PLUS_HAUT</th>
+        <th scope="col">Date début</th>
+        <th scope="col">Date CIBLE touchée</th>
+        <th scope="col">Date vente</th>
+      </tr>
+    </thead>
+    <tbody>
+  
+  
+  
+      <tr>
+        <th>fdsqf</th>
+        <th>fdsqf</th>
+        <th>fdsqf</th>
+        <td>fdsqf %</td>
+        <td>fdsqffsdq</td>
+        <td id="etat_smart_sell">fdsqfds <button class="btn btn-warning">Annuler</button></td>
+        <td id="last_top">fdsqfdsqf</td>
+        <td>fdsqffsdq</td>
+        <td>fdsqffsdq</td>
+        <td>fdsqffsdq</td>
+      </tr>
+  
+  
+  
+    </tbody>
+  </table>
 
   </body>
+
+
+
+
+<script>
+
+
+var myModal = new bootstrap.Modal(document.getElementById('modalCleAPI'), {
+  keyboard: false,
+  backdrop: 'static'
+  });
+
+
+function saisie_cle_api() {
+  myModal.hide()
+}
+
+window.addEventListener('load', function () {
+  myModal.show();
+});
+
+
+
+</script>
+
+
 </html>
