--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 
 
-    <link href="cover.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
     
