--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -55,7 +55,7 @@
     <li>Fixe un prix CIBLE, le suit vers le haut et attend une baisse de X % pour vendre.</li>
     <br><li>Comment ça marche ?<br>Grâce à l'API Binance, l'application reçoit constamment le prix ACTUEL de votre coin. Quand celui-ci atteint votre CIBLE, le smart sell se met en route :
     <br>- Il enregistre et actualise en permanence le dernier PLUS_HAUT depuis que CIBLE touchée.<br>- Si prix ACTUEL subit une baisse de X % par rapport à PLUS_HAUT, il vend.</li>   
-    <br><li>Pourquoi faire ?<br>Le marché monte, vous êtes en positif, mais vous ne savez pas quand TP, vous savez pas si le pump va continuer, vous hésitez et surtout il est 4H du mat, vous devez aller vous coucher, ça se trouve le retournement se fera a 8H.</li>
+    <br><li>Pourquoi faire ?<br>Le marché monte, vous êtes en positif, mais vous ne savez pas quand TP, vous savez pas si le pump va continuer, vous hésitez et surtout il est 4H du mat, vous devez aller vous coucher, ça se trouve le retournement se fera a 8H.<br>Voyez ça comme un SL suiveur.</li>
     <br><li>Si vous voulez juste profiter d'un pump, mettez un prix proche du prix ACTUEL en prix CIBLE.
     </ul>
     <br>
