--- a/app/index.html
+++ b/app/index.html
@@ -360,7 +360,7 @@ setInterval(function(){
 
   }
 
-  if(rep_recu==1 && !smart_buy_activated){
+  if(rep_recu_buy==1 && !smart_buy_activated){
     document.getElementById("smart_buy_paire").innerHTML = "";
     document.getElementById("smart_buy_prix_cible").innerHTML = "";
     document.getElementById("smart_buy_ecart").innerHTML = "";
