--- a/soutenir.html
+++ b/soutenir.html
@@ -50,7 +50,7 @@
     <h1>ETH</h1>
     <p class="lead">0xa82f9a2a9950ee6ac44fd8af6849655e7ae975bf</p>
     <h1>BNB</h1>
-    <p class="lead">bnb136ns6lfw4zs5hg4n85vdthaad7hq5m4gtkgf23<br>Memo 100394314</p>
+    <p class="lead">0xa82f9a2a9950ee6ac44fd8af6849655e7ae975bf<br>BEP20 (BSC)</p>
   </main>
 
   <footer class="mt-auto text-white-50">
