--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 
     <link href="style.css" rel="stylesheet">
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/hmac-sha256.js"></script>
 
 
   </head>
@@ -223,8 +223,10 @@ var myModal = new bootstrap.Modal(document.getElementById('modalCleAPI'), {
 function saisie_cle_api() {
   cle = document.getElementById("cle").innerHTML;
   secret = document.getElementById("secret").innerHTML;
-  console.log("cle et secret API pris en compte ("+cle+"/"+secret+")");
+  console.log("clé et secret API attribués");
   myModal.hide()
+
+  console.log("test encrypt pour la future requete signé si ordre - > HMAC SHA256 : "+CryptoJS.HmacSHA256("query", secret));
 }
 
 //quand page prete
@@ -556,7 +558,8 @@ function cancel_smart_sell(){
 //add quantite dispo sur wallet spot binance de la paire select
 //xmlhttp market buy/sell if real_buy / real_sell
 //creer array pour plusieurs smart sell/buy
-//ameliorer interface
+//ameliorer interface 
+//bouton cible actuel profiter pump/dump ! - changer fonctionnalites.html alors
 //mettre code smart sell/buy dans js ext
 
 
