--- a/app/index.html
+++ b/app/index.html
@@ -558,7 +558,8 @@ function cancel_smart_sell(){
 //add quantite dispo sur wallet spot binance de la paire select
 //xmlhttp market buy/sell if real_buy / real_sell
 //creer array pour plusieurs smart sell/buy
-//ameliorer interface 
+//ameliorer interface  //responsiv design
+//mettre bouton cacher tradingview
 //bouton cible actuel profiter pump/dump ! - changer fonctionnalites.html alors
 //mettre code smart sell/buy dans js ext
 
