--- a/app/index.html
+++ b/app/index.html
@@ -96,7 +96,7 @@
     <td><input id="smart_buy_input_quantite" type="text" class="form-control col-2" placeholder="Quantité, ex 0.5555"></td>
     <td> <button type="button" onclick="smart_buy(false)" id="smart_buy_button_test" class="btn btn-secondary">Test</button></td>
     <td><button type="button" onclick="smart_buy(true)" id="smart_buy_button" class="btn btn-success">Acheter pour de vrai</button></td>
-    <td>Solde dispo : 43.23</td>
+    <td>Solde dispo : </td>
   </tr></table>
   
   <table class="table table-dark table-striped">
@@ -155,7 +155,7 @@
     <td><input id="smart_sell_input_quantite" type="text" class="form-control col-2" placeholder="Quantité, ex 0.5555"></td>
     <td> <button type="button" onclick="smart_sell(false)" id="smart_sell_button_test" class="btn btn-secondary">Test</button></td>
     <td><button type="button" onclick="smart_sell(true)" id="smart_sell_button" class="btn btn-danger">Vendre pour de vrai</button></td>
-    <td>Solde dispo : 43.23</td>
+    <td>Solde dispo : </td>
   </tr></table>
 
   <table class="table table-dark table-striped">
