test order buy api bibi

--- a/app/index.html
+++ b/app/index.html
@@ -561,7 +561,64 @@ function cancel_smart_sell(){
 //ameliorer interface  //responsiv design
 //mettre bouton cacher tradingview
 //bouton cible actuel profiter pump/dump ! - changer fonctionnalites.html alors
-//mettre code smart sell/buy dans js ext
+//mettre code smart sell/buy dans js ext avec separation fonction get price + order buy / sell
+
+
+
+
+
+
+var xhr = new XMLHttpRequest();
+xhr.open("POST", 'https://api.binance.com/api/v3/order', true);
+
+//Envoie les informations du header adaptées avec la requête
+//xhr.setRequestHeader("User-Agent", "Mozilla/4.0 (compatible; PHP Binance API)");//X-MBX-APIKEY: vmPUZE6mv9SD5VNHk4HlWFsOr6aKE2zvsw0MuIgwCIPy6utIco14y7Ju91duEh8A
+xhr.setRequestHeader("X-MBX-APIKEY", "Hu3CLKGBt23TibLaoRMIiKmsql0hGMt4agzxaxww0lrKdOX9b0mOSX7GSPW4qYw3");
+xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+
+xhr.onreadystatechange = function() { //Appelle une fonction au changement d'état.
+    if (this.readyState === XMLHttpRequest.DONE && this.status === 200) {
+// Requête finie, traitement ici.
+      console.log(JSON.parse(this.responseText));
+    }
+}
+xhr.send("symbol=BTCUSDT&side=BUY&type=LIMIT&quantity=1.2&recvWindow=60000&price=50000.2&timeInForce=GTC×tamp=1619986146365&signature=c02d5f3a253bb77b6803a15a580b60e768c7cdac6b9e506c6937c68c8a3c429a");
+
+
+
+
+/*
+REQUETE AVANT SIGNED :
+order , opt = Array ( [symbol] => BTCUSDT [side] => BUY [type] => LIMIT [quantity] => 1.2 [recvWindow] => 60000 [price] => 50000.2 [timeInForce] => GTC ) , POST
+dans fonction SIGNED
+query :
+symbol=BTCUSDT&side=BUY&type=LIMIT&quantity=1.2&recvWindow=60000&price=50000.2&timeInForce=GTC×tamp=1619986146365
+on crypte la query avec le secret, ca donne : c02d5f3a253bb77b6803a15a580b60e768c7cdac6b9e506c6937c68c8a3c429a
+nouveau opt =>
+Array ( [http] => Array ( [method] => POST [ignore_errors] => 1 [header] => User-Agent: Mozilla/4.0 (compatible; PHP Binance API) X-MBX-APIKEY: Hu3CLKGBt23TibLaoRMIiKmsql0hGMt4agzxaxww0lrKdOX9b0mOSX7GSPW4qYw3 Content-type: application/x-www-form-urlencoded ) )
+parameters encoded as POST data (in variable context) =>
+endpoint = https://api.binance.com/api/v3/order
+postdate = symbol=BTCUSDT&side=BUY&type=LIMIT&quantity=1.2&recvWindow=60000&price=50000.2&timeInForce=GTC×tamp=1619986146365&signature=c02d5f3a253bb77b6803a15a580b60e768c7cdac6b9e506c6937c68c8a3c429a
+postdate qui va dans var opt['http']['content']
+on arrive a la finArray ( [code] => -2010 [msg] => Account has insufficient balance for requested action. )
+*/
+
+/*
+Access to XMLHttpRequest at 'https://api.binance.com/api/v3/order' from origin 'null' has been blocked by CORS policy: Request header field x-mbx-apikey is not allowed by Access-Control-Allow-Headers in preflight response.
+index.html:581 POST https://api.binance.com/api/v3/order? net::ERR_FAILED
+
+
+
+(HMAC SHA256)
+    $ curl -H "X-MBX-APIKEY: vmPUZE6mv9SD5VNHk4HlWFsOr6aKE2zvsw0MuIgwCIPy6utIco14y7Ju91duEh8A" -X POST 'https://api.binance.com/api/v3/order' -d 'symbol=LTCBTC&side=BUY&type=LIMIT&timeInForce=GTC&quantity=1&price=0.1&recvWindow=5000&timestamp=1499827319559&signature=c8db56825ae71d6d79447849e617115f4a920fa2acdcab2b053c4b2838bd6b71'
+
+
+    (HMAC SHA256)
+   $ curl -H "X-MBX-APIKEY: vmPUZE6mv9SD5VNHk4HlWFsOr6aKE2zvsw0MuIgwCIPy6utIco14y7Ju91duEh8A" -X POST 'https://api.binance.com/api/v3/order?symbol=LTCBTC&side=BUY&type=LIMIT&timeInForce=GTC&quantity=1&price=0.1&recvWindow=5000&timestamp=1499827319559&signature=c8db56825ae71d6d79447849e617115f4a920fa2acdcab2b053c4b2838bd6b71'
+ 
+   $ curl -H "X-MBX-APIKEY: vmPUZE6mv9SD5VNHk4HlWFsOr6aKE2zvsw0MuIgwCIPy6utIco14y7Ju91duEh8A" -X POST 'https://api.binance.com/api/v3/order?symbol=LTCBTC&side=BUY&type=LIMIT&timeInForce=GTC' -d 'quantity=1&price=0.1&recvWindow=5000&timestamp=1499827319559&signature=0fd168b8ddb4876a0358a8d14d0c9f3da0e9b20c5d52b2a00fcf7d1c602f9a77'
+
+*/
 
 
 </script>
