debug peut etre

--- a/app/index.html
+++ b/app/index.html
@@ -599,7 +599,7 @@ var xmlhttp_test = new XMLHttpRequest();
     };
     xmlhttp_test.open("POST", url, true);
     xmlhttp_test.withCredentials = true; 
-    xmlhttp_test.setRequestHeader("Access-Control-Allow-Origin", "cryptochancla.github.io");
+    xmlhttp_test.setRequestHeader("Access-Control-Allow-Origin", "https://cryptochancla.github.io/app/");
     xmlhttp_test.send();
 
  
