--- a/app/index.html
+++ b/app/index.html
@@ -600,6 +600,7 @@ var xmlhttp_test = new XMLHttpRequest();
     xmlhttp_test.open("POST", url, true);
     xmlhttp_test.withCredentials = true; 
     xmlhttp_test.setRequestHeader("Access-Control-Allow-Origin", "https://cryptochancla.github.io");
+    xmlhttp_test.setRequestHeader("Access-Control-Allow-Credentials", "true");
     xmlhttp_test.send(null);
 
  
