--- a/app/index.html
+++ b/app/index.html
@@ -201,7 +201,7 @@
 
 
 
-  <div id="json_div"></div>
+
 
   </body>
 
@@ -565,9 +565,7 @@ function cancel_smart_sell(){
 
 
 
-
 /*
-
 var xhr = new XMLHttpRequest();
 xhr.open("POST", 'https://api.binance.com/api/v3/order', true);
 
@@ -588,7 +586,7 @@ xhr.send("symbol=BTCUSDT&side=BUY&type=LIMIT&quantity=1.2&recvWindow=60000&price
 
 
 var xmlhttp_test = new XMLHttpRequest();
-    var url = "https://api.binance.com/api/v3/order";
+    var url = "https://cors-escape.herokuapp.com/https://api.binance.com/api/v3/order";
 
 
     xmlhttp_test.onreadystatechange = function() {
@@ -600,7 +598,7 @@ var xmlhttp_test = new XMLHttpRequest();
     xmlhttp_test.open("POST", url, true);
     xmlhttp_test.withCredentials = false; 
     //xmlhttp_test.setRequestHeader("Access-Control-Allow-Credentials", "true");
-    xmlhttp_test.setRequestHeader("Access-Control-Allow-Origin", "https://cryptochancla.github.io");
+    //xmlhttp_test.setRequestHeader("Access-Control-Allow-Origin", "https://cryptochancla.github.io");
     xmlhttp_test.send(null);
 
  
