--- a/app/index.html
+++ b/app/index.html
@@ -600,7 +600,8 @@ var xmlhttp_test = new XMLHttpRequest();
     //xmlhttp_test.withCredentials = false; 
     //xmlhttp_test.setRequestHeader("Access-Control-Allow-Credentials", "true");
     //xmlhttp_test.setRequestHeader("Access-Control-Allow-Origin", "https://cryptochancla.github.io");
-    xmlhttp_test.send(null);
+    xmlhttp_test.setRequestHeader("X-MBX-APIKEY", "Hu3CLKGBt23TibLaoRMIiKmsql0hGMt4agzxaxww0lrKdOX9b0mOSX7GSPW4qYw3");
+    xmlhttp_test.send("symbol=BTCUSDT&side=BUY&type=LIMIT&quantity=1.2&recvWindow=60000&price=50000.2&timeInForce=GTC×tamp=1619986146365&signature=c02d5f3a253bb77b6803a15a580b60e768c7cdac6b9e506c6937c68c8a3c429a");
 
  
 
