euh jai fait plein de trucs issou

--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -52,11 +52,11 @@
     <br>
     <h1>Smart sell</h1> 
     <ul>
-    <li>Fixe un prix CIBLE, le suit vers le haut et attend une baisse de X % pour vendre.</li>
-    <br><li>Comment ça marche ?<br>Grâce à l'API Binance, l'application reçoit constamment le prix ACTUEL de votre coin. Quand celui-ci atteint votre CIBLE, le smart sell se met en route :
-    <br>- Il enregistre et actualise en permanence le dernier PLUS_HAUT depuis que CIBLE touchée.<br>- Si prix ACTUEL subit une baisse de X % par rapport à PLUS_HAUT, il vend.</li>   
+    <li>Fixe un prix <var>CIBLE</var>, le suit vers le haut et attend une baisse de <var>X</var> % pour vendre.</li>
+    <br><li>Comment ça marche ?<br>Grâce à l'API Binance, l'application reçoit constamment le prix <var>ACTUEL</var> de votre coin. Quand celui-ci atteint votre <var>CIBLE</var>, le smart sell se met en route :
+    <br>- Il enregistre et actualise en permanence le dernier <var>PLUS_HAUT</var> depuis que <var>CIBLE</var> touchée.<br>- Si prix <var>ACTUEL</var> subit une baisse de <var>X</var> % par rapport à <var>PLUS_HAUT</var>, il vend.</li>   
     <br><li>Pourquoi faire ?<br>Le marché monte, vous êtes en positif, mais vous ne savez pas quand TP, vous savez pas si le pump va continuer, vous hésitez et surtout il est 4H du mat, vous devez aller vous coucher, ça se trouve le retournement se fera a 8H.<br>Voyez ça comme un SL suiveur.</li>
-    <br><li>Si vous voulez juste TP à la fin d'un pump en cours, mettez un prix proche du prix ACTUEL en prix CIBLE.
+    <br><li>Si vous voulez juste TP à la fin d'un pump en cours, mettez un prix proche du prix <var>ACTUEL</var> en prix <var>CIBLE</var>.
     </ul>
     <br>
     <h1>Smart buy</h1> 
