--- a/app/index.html
+++ b/app/index.html
@@ -101,7 +101,7 @@
     <h2>Solde Fiat et Spot</h2>
     <p id="balance"></p>
 
-    <h2>Smart buy</h2><p>Saisir un nouveau annule et remplace celui en cours.</p>
+    <h2>Smart Buy</h2><p>Saisir un nouveau annule et remplace celui en cours.</p>
 
     <div class="row">
       <div class="col-sm">
@@ -112,7 +112,7 @@
         <input id="smart_buy_input_prix_cible" type="text" class="form-control col-2" placeholder="Prix CIBLE, ex 61234.1234">
       </div>
       <div class="col-sm">
-        <input id="smart_buy_input_ecart" type="text" class="form-control col-2" placeholder="Ecart déclencheur X en %, ex 15">
+        <input id="smart_buy_input_ecart" type="text" class="form-control col-2" placeholder="Ecart déclencheur X en %, ex 1.5">
       </div>
       <div class="col-sm">
         <input id="smart_buy_input_quantite" type="text" class="form-control col-2" placeholder="Quantité, ex 0.5555">
@@ -198,7 +198,7 @@
     </div>
 
 
-    <h2>Smart sell</h2><p>Saisir un nouveau annule et remplace celui en cours.</p>
+    <h2>Smart Sell</h2><p>Saisir un nouveau annule et remplace celui en cours.</p>
 
 
     <div class="row">
