--- a/app/index.html
+++ b/app/index.html
@@ -311,13 +311,12 @@
   <script>
 
   //TO DO
-  //xmlhttp market buy/sell if real_buy / real_sell
-  //afficher retour erreur binance si ordre passé
+  //afficher retour erreur binance si ordre passé ? => console.log + console reseau si error
 
   //creer array pour plusieurs smart sell/buy ? => suffit douvrir un autre onglet
 
   //ameliorer interface / responsiv design
-  //mettre bouton cacher tradingview 
+  //mettre bouton cacher tradingview ?
   //bouton cible actuel profiter pump/dump ! - changer fonctionnalites.html alors
 
   </script>
