les ptits hr pour faire jojo

--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,8 @@
     <h2>Solde Fiat et Spot</h2>
     <p id="balance"></p>
 
+    <hr>
+
     <h2>Smart Buy</h2><p>Saisir un nouveau annule et remplace celui en cours.</p>
 
     <div class="row">
@@ -197,6 +199,7 @@
       </div>
     </div>
 
+    <hr>
 
     <h2>Smart Sell</h2><p>Saisir un nouveau annule et remplace celui en cours.</p>
 
@@ -311,13 +314,13 @@
   <script>
 
   //TO DO
-  //afficher retour erreur binance si ordre passé ? => console.log + console reseau si error
+  //afficher retour binance quand ordre passé ? => console.log + console reseau si error
 
-  //creer array pour plusieurs smart sell/buy ? => suffit douvrir un autre onglet
+  //creer array pour plusieurs smart sell/buy ? => suffit douvrir d'autres onglets
 
-  //ameliorer interface / responsiv design
+  //ameliorer interface
   //mettre bouton cacher tradingview ?
-  //bouton cible actuel profiter pump/dump ! - changer fonctionnalites.html alors
+  //bouton cible<>actuel - profiter pump/dump => modif fonctionnalites.html
 
   </script>
 
