changement nom plus de clarté

--- a/app/index.html
+++ b/app/index.html
@@ -114,7 +114,7 @@
         <input id="smart_buy_input_prix_cible" type="text" class="form-control col-2" placeholder="Prix CIBLE, ex 61234.1234">
       </div>
       <div class="col-sm">
-        <input id="smart_buy_input_ecart" type="text" class="form-control col-2" placeholder="Ecart déclencheur X en %, ex 1.5">
+        <input id="smart_buy_input_ecart" type="text" class="form-control col-2" placeholder="Ecart toléré X en %, ex 1.5">
       </div>
       <div class="col-sm">
         <input id="smart_buy_input_quantite" type="text" class="form-control col-2" placeholder="Quantité, ex 0.5555">
@@ -137,7 +137,7 @@
             <tr>
               <th>Paire</th>
               <th>Prix CIBLE</th>
-              <th>Ecart déclencheur X</th>
+              <th>Ecart toléré X</th>
               <th>Quantité</th>
               <th>Etat</th>
               <th></th>
@@ -213,7 +213,7 @@
         <input id="smart_sell_input_prix_cible" type="text" class="form-control col-2" placeholder="Prix CIBLE, ex 61234.1234">
       </div>
       <div class="col-sm">
-        <input id="smart_sell_input_ecart" type="text" class="form-control col-2" placeholder="Ecart déclencheur X en %, ex 1.5">
+        <input id="smart_sell_input_ecart" type="text" class="form-control col-2" placeholder="Ecart toléré X en %, ex 1.5">
       </div>
       <div class="col-sm">
         <input id="smart_sell_input_quantite" type="text" class="form-control col-2" placeholder="Quantité, ex 0.5555">
@@ -236,7 +236,7 @@
             <tr>
               <th>Paire</th>
               <th>Prix CIBLE</th>
-              <th>Ecart déclencheur X</th>
+              <th>Ecart toléré X</th>
               <th>Quantité</th>
               <th>Etat</th>
               <th></th>
