--- a/soutenir.html
+++ b/soutenir.html
@@ -45,12 +45,10 @@
   </header>
 
   <main class="px-3">
-    <h1>BTC</h1>
-    <p class="lead">1nfrJLybuvNRiCju9VmrRmk7rKBcW4UWs</p>
-    <h1>ETH</h1>
-    <p class="lead">0xa82f9a2a9950ee6ac44fd8af6849655e7ae975bf</p>
-    <h1>BNB</h1>
-    <p class="lead">0xa82f9a2a9950ee6ac44fd8af6849655e7ae975bf<br>BEP20 (BSC)</p>
+    <h1>Réseau principal Ethereum</h1>
+    <p class="lead">0xF5B6b8Ff1469dcfa86133c79ff9531e52fdC5e82</p>
+    <h1>Binance Smart Chain</h1>
+    <p class="lead">0x59f0482135278d6DaF1B8825e17453040873c8BD</p>
   </main>
 
   <footer class="mt-auto text-white-50">
