--- a/app/index.html
+++ b/app/index.html
@@ -314,8 +314,10 @@
   <script>
 
   //TO DO
-  //afficher retour binance quand ordre passé ? => console.log + console reseau si error
+  //changer paire sur tradingview apres change select
+  //preciser si realbuy/sell or not
 
+  //afficher retour binance quand ordre passé ? => console.log + console reseau si error
   //creer array pour plusieurs smart sell/buy ? => suffit douvrir d'autres onglets
 
   //ameliorer interface
