proxy cors info debut

--- a/app/index.html
+++ b/app/index.html
@@ -58,8 +58,13 @@
                 <label for="secret" class="col-form-label">Secret :</label>
                 <input type="text" class="form-control" id="secret">
               </div>
+              <div class="mb-3">
+                <label for="secret" class="col-form-label">Lien de votre proxy CORS (facultatif) :</label>
+                <input type="text" class="form-control" id="secret">
+              </div>
             </form>
             <p>Laissez vide si vous voulez juste tester.</p>
+            <a href="./cors.html">Explication concernant le proxy CORS</a>
           </div>
           <div class="modal-footer">
             <button type="button" onclick="saisie_cle_api()" class="btn btn-secondary">Commencer</button>
