--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
               </div>
             </form>
             <p>Laissez vide si vous voulez juste tester.</p>
-            <a href="./cors.html">Explication concernant le proxy CORS</a>
+            <a href="../cors.html">Explication concernant le proxy CORS</a>
           </div>
           <div class="modal-footer">
             <button type="button" onclick="saisie_cle_api()" class="btn btn-secondary">Commencer</button>
