--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
         <a class="nav-link" href="fonctionnalites.html">Fonctionnalités</a>
+        <a class="nav-link" href="cors.html">Explication Proxy CORS</a>
         <a class="nav-link" href="soutenir.html">Soutenir</a>
       </nav>
     </div>
