--- a/cors.html
+++ b/cors.html
@@ -38,7 +38,8 @@
       <h3 class="float-md-start mb-0"><i class="bi bi-calculator-fill"></i>CryptoChancla</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link" aria-current="page" href="index.html">Accueil</a>
-        <a class="nav-link active" href="fonctionnalites.html">Fonctionnalités</a>
+        <a class="nav-link" href="fonctionnalites.html">Fonctionnalités</a>
+        <a class="nav-link active" href="cors.html">Explication Proxy CORS</a>
         <a class="nav-link" href="soutenir.html">Soutenir</a>
       </nav>
     </div>
