ajout input proxy cors perso fonctionnel

--- a/app/index.html
+++ b/app/index.html
@@ -59,8 +59,8 @@
                 <input type="text" class="form-control" id="secret">
               </div>
               <div class="mb-3">
-                <label for="secret" class="col-form-label">Lien de votre proxy CORS (facultatif) :</label>
-                <input type="text" class="form-control" id="secret">
+                <label for="proxy_cors" class="col-form-label">Lien de votre proxy CORS (facultatif) :</label>
+                <input type="text" class="form-control" id="proxy_cors" placeholder="ex : https://cryptochancla.herokuapp.com/">
               </div>
             </form>
             <p>Laissez vide si vous voulez juste tester.</p>
