--- a/cors.html
+++ b/cors.html
@@ -50,9 +50,9 @@
     <code>"<br>
       Ok c'est que du front-end mais pourquoi tu as besoin de faire les requêtes vers ton serveur ?
 
-      https://github.com/cryptochancla/cryptochancla.github.io/blob/main/app/smart_buy.js ligne 169<br>
+      smart_buy.js ligne 169<br>
       
-      &lt;&lt;var url = "https://cryptochancla.herokuapp.com/https://api.binance.com/api/v3/order";	&gt;	&gt;<br>
+      &lt;&lt;<br>var url = "https://cryptochancla.herokuapp.com/https://api.binance.com/api/v3/order";<br>&gt;&gt;<br>
       N'utilisez pas un site auquel vous n'avez aucune confiance les kheys.
       <br>"</code>
 </p>
