--- a/cors.html
+++ b/cors.html
@@ -66,7 +66,7 @@
       <p>et ca me fait trop chier parce que oui c'est le seul truc qui peut faire douter d'un point de vue extérieur
       mais tu viens de me donner une idée : je vais rajouter un input pour insérer son propre lien proxy cors</p>
       
-      <p>il faut créer son propre proxy cors (trèss facile et rapide sur herokuapp) parce que les proxy cors qu'on trouve sur google, leur IP a été trop utilisée sur binance, du coup "HTTP 403 return code is used when the WAF Limit (Web Application Firewall) has been violated."
+      <p>il faut créer son propre proxy cors (très facile et rapide sur herokuapp) parce que les proxy cors qu'on trouve sur google, leur IP a été trop utilisée sur binance, du coup "HTTP 403 return code is used when the WAF Limit (Web Application Firewall) has been violated."
         <br>&#148;</p>
     
     <h3>Conclusion</h3>
