--- a/cors.html
+++ b/cors.html
@@ -52,8 +52,7 @@
 
       smart_buy.js ligne 169<br>
       
-      &lt;&lt;<br>var url = "https://cryptochancla.herokuapp.com/https://api.binance.com/api/v3/order";<br>&gt;&gt;<br>
-      N'utilisez pas un site auquel vous n'avez aucune confiance les kheys.
+      &lt;&lt;<br>var url = "https://cryptochancla.herokuapp.com/https://api.binance.com/api/v3/order";<br>&gt;&gt;
       <br>&#148;</code>
 </p>
     <p>&#147;<br>
