--- a/cors.html
+++ b/cors.html
@@ -69,7 +69,7 @@
         <br>&#148;</p>
     
     <h3>Conclusion</h3>
-    <p>Vous pouvez utiliser mon proxy CORS (https://cryptochancla.herokuapp.com/) qui est un simple fork de https://github.com/Rob--W/cors-anywhere<br>Dans ce cas rien à faire. Laissez le champ proxy cors vide.</p>
+    <p>Vous pouvez utiliser mon proxy CORS (https://cryptochancla.herokuapp.com/) qui est un simple fork de https://github.com/Rob--W/cors-anywhere<br>Dans ce cas rien à faire. Laissez le champ proxy CORS vide.</p>
     <p>Ou alors, vous pouvez créer votre proxy CORS et saisir son url dans le champ proxy CORS.</p>
     
 
