--- a/soutenir.html
+++ b/soutenir.html
@@ -46,9 +46,9 @@
   </header>
 
   <main class="px-3">
-    <h1>Réseau principal Ethereum</h1>
+    <h1>ETH Mainnet</h1>
     <p class="lead">0xF5B6b8Ff1469dcfa86133c79ff9531e52fdC5e82</p>
-    <h1>Binance Smart Chain</h1>
+    <h1>BSC Mainnet</h1>
     <p class="lead">0x59f0482135278d6DaF1B8825e17453040873c8BD</p>
   </main>
 
