--- a/app/index.html
+++ b/app/index.html
@@ -189,7 +189,7 @@
         <tr>
           <th>Date début</th>
           <th>Date CIBLE touchée</th>
-          <th>Date vente</th>
+          <th>Date achat</th>
         </tr>
       </thead>
       <tbody>
