--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content bg-dark">
           <div class="modal-header">
-            <h5 class="modal-title" id="modalCleAPILabel">Liaison vers votre compte Binance</h5>
+            <h5 class="modal-title" id="modalCleAPILabel">Liaison avec votre compte Binance</h5>
           </div>
           <div class="modal-body">
             <form>
