--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -47,10 +47,10 @@
 
   <main class="px-3">
 
-    <p>Application et code source hebergés sur github.<br>
+    <p>Trailing Stop Order pour le marché Spot.<br>
+      Application et code source hebergés sur github.<br>
     C'est du front-end, laissez tourner sur votre machine.<br>
-    L'avantage c'est que vous avez le contrôle. Votre clé API n'est pas stockée.<br>
-    ~Trailing Stop Order pour le marché Spot.
+    L'avantage c'est que vous avez le contrôle. Votre clé API n'est pas stockée.
     </p>
     <br>
     <h1>Smart sell</h1> 
