--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -67,6 +67,11 @@
     <br>
     <h3>Bonus</h3> 
     <p>C'est des market orders, pas de risque de vendre ou acheter à un prix délirant.<br>Si vous voulez gérer un liste de plusieurs smart buy/sell, ouvrez plusieurs onglets.</p>
+    <br>
+    <h3>Important</h3> 
+    <p>Pour la quantité à indiquer, c'est la quantité du base asset<br>
+      ca veut dire par exemple sur la paire BTC/USDT, la quantité à indiquer c'est la quantité de BTC que vous voulez echanger (vendre/acheter) !<br>
+      pour la vente ca pose pas de probleme particulier a l'usage, mais pour l'achat c'est plus embettant, je travail dessus actuellement pour pouvoir mettre le nombre d'usdt qu'on veut depenser.</p>
 
   </main>
 
