--- a/app/index.html
+++ b/app/index.html
@@ -303,10 +303,9 @@
     </div>
 
 <p>
-    In order to pass the lot size, the following must be true for quantity/icebergQty:<br>
-    quantity >= minQty<br>
-    quantity <= maxQty<br>
-    (quantity-minQty) % stepSize == 0
+    Binance demande une quantité min et une décimal max sur les échanges :<br>
+    https://www.binance.com/fr/trade-rule<br>
+    Dans la liste, à côté de la paire, est indiqué la décimal max.<br>
 </p>
 
 
